--- a/react-summary/package.json
+++ b/react-summary/package.json
@@ -1,33 +1,37 @@
 {
-  "name": "react-summary",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "antd-mobile": "^2.2.6",
-    "babel-jest": "^23.6.0",
-    "rc-queue-anim": "^1.6.10",
-    "react": "^16.7.0",
-    "react-addons-css-transition-group": "^15.6.2",
-    "react-animated-router": "^0.1.11",
-    "react-dom": "^16.7.0",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
-    "react-transition-group": "^2.5.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "name": "react-summary",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "antd-mobile": "^2.2.6",
+        "babel-jest": "^23.6.0",
+        "rc-queue-anim": "^1.6.10",
+        "react": "^16.7.0",
+        "react-addons-css-transition-group": "^15.6.2",
+        "react-animated-router": "^0.1.11",
+        "react-dom": "^16.7.0",
+        "react-router": "^4.3.1",
+        "react-router-dom": "^4.3.1",
+        "react-scripts": "2.1.1",
+        "react-transition-group": "^2.5.2",
+        "animated": "^0.2.1",
+        "react-motion": "^0.5.2",
+        "gsap": "^1.20.3",
+        "react-gsap-enhancer": "^0.3.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ]
 }
