--- a/react-summary/package.json
+++ b/react-summary/package.json
@@ -17,7 +17,11 @@
         "animated": "^0.2.1",
         "react-motion": "^0.5.2",
         "gsap": "^1.20.3",
-        "react-gsap-enhancer": "^0.3.0"
+        "react-gsap-enhancer": "^0.3.0",
+        "react-hot-loader": "^4.3.5",
+        "babel-polyfill": "^6.26.0",
+        "less": "^3.8.1",
+        "less-loader": "^4.1.0"
     },
     "scripts": {
         "start": "react-scripts start",
