--- a/react-summary/package.json
+++ b/react-summary/package.json
@@ -9,6 +9,7 @@
         "babel-jest": "^23.6.0",
         "babel-polyfill": "^6.26.0",
         "gsap": "^1.20.3",
+        "moment": "^2.24.0",
         "rc-queue-anim": "^1.6.10",
         "react": "^16.7.0",
         "react-addons-css-transition-group": "^15.6.2",
