--- a/small-program/app.json
+++ b/small-program/app.json
@@ -1,9 +1,11 @@
 {
   "pages": [
+    "pages/profile/profile",
     "pages/login/login",
     "pages/index/index",
     "pages/logs/logs",
     "pages/agreement/agreement"
+   
   ],
   "window": {
     "backgroundTextStyle": "light",
