--- a/small-program/app.json
+++ b/small-program/app.json
@@ -1,4 +1,5 @@
 {
+  "✅_pages注释":"页面设置",
   "pages": [
     "pages/home/home",
     "pages/login/login",
@@ -8,6 +9,8 @@
     "pages/detail/detail",
     "pages/rank/rank"
   ],
+
+  "✅_tabBar注释":"tabBar设置",
   "tabBar": {
     "color": "#AAAAAA",
     "selectedColor": "#56B465",
@@ -15,24 +18,32 @@
     "list": [
       {
         "pagePath": "pages/home/home",
-        "text": "首页",
+        "text": "视野",
         "iconPath": "/assets/imgs/ic_tab_home_normal.png",
         "selectedIconPath": "/assets/imgs/ic_tab_home_active.png"
       },
       {
         "pagePath": "pages/rank/rank",
-        "text": "榜单",
+        "text": "专业",
+        "iconPath": "/assets/imgs/ic_tab_professional_normal.png",
+        "selectedIconPath": "/assets/imgs/ic_tab_professional_active.png"
+      },
+      {
+        "pagePath": "pages/profile/profile",
+        "text": "书影音",
         "iconPath": "/assets/imgs/ic_tab_subject_normal.png",
         "selectedIconPath": "/assets/imgs/ic_tab_subject_active.png"
       },
       {
-        "pagePath": "pages/profile/profile",
-        "text": "我的",
+        "pagePath": "pages/agreement/agreement",
+        "text": "目标",
         "iconPath": "/assets/imgs/ic_tab_profile_normal.png",
         "selectedIconPath": "/assets/imgs/ic_tab_profile_active.png"
       }
     ]
   },
+
+  "✅_window注释":"tabBar设置",
   "window": {
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#fff",
@@ -41,10 +52,12 @@
     "navigationStyle": "custom",
     "enablePullDownRefresh": true
   },
+
   "permission": {
     "scope.userLocation": {
       "desc": "您的位置信息将用于获取影院信息"
     }
   },
+  
   "sitemapLocation": "sitemap.json"
 }
