--- a/react-summary/package.json
+++ b/react-summary/package.json
@@ -23,7 +23,8 @@
         "react-router-dom": "^4.3.1",
         "react-scripts": "2.1.1",
         "react-touch-loader": "^1.1.4",
-        "react-transition-group": "^2.5.2"
+        "react-transition-group": "^2.5.2",
+        "styled-components": "^5.1.1"
     },
     "scripts": {
         "start": "react-scripts start",
